--- a/src/components/home/card/index.css
+++ b/src/components/home/card/index.css
@@ -4,6 +4,7 @@
   box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
   transition: transform 100ms ease-in;
   cursor: pointer;
+  height: 100%;
 }
 
 .card:hover {
@@ -12,7 +13,7 @@
 
 .card > img {
   object-fit: fill;
-  min-height: 200px;
+  height: 220px;
   width: 100%;
 }
 
@@ -34,4 +35,9 @@
   font-weight: 300;
   margin-top: 8px;
   margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
