--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1, h2, h3, h4, h5, h6, p, a, span, strong {
+  line-height: inherit !important;
+}
+
+img{
+  max-width: 100%;
+}
+
+.slick-prev:before, .slick-next:before {
+  color: #000 !important;
+}
