--- a/src/pages/booking/ClientDetails.css
+++ b/src/pages/booking/ClientDetails.css
@@ -34,6 +34,9 @@
   display: flex;
   justify-content: space-between;
 }
+.flex {
+  display: flex;
+}
 .bracketGrey {
   color: #6b6b6b;
   font-size: 12px;
@@ -61,9 +64,10 @@
 }
 .borderBlack {
   border: 1px solid black;
-  width: 20%;
+  /* width: 20%; */
   font-size: 12px;
   text-align: center;
+  padding: 3px 10px;
 }
 .greenBox {
   background-color: #d2edd5;
@@ -80,6 +84,36 @@
   padding: 5px 10px;
 }
 .selectbox {
-  padding: 5px;
-  border-radius: 5px;
+  padding: 5px 15px;
+  /* border-radius: 5px; */
+}
+
+.parkRes {
+  display: flex;
+  gap: 2%;
+}
+@media screen and (max-width: 856px) {
+  /* .checkOutD {
+    font-size: 12px;
+  } */
+  .fontSize {
+    font-size: 12px;
+  }
+  .font23dark {
+    font-size: 15px;
+  }
+  .labelFont {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 696px) {
+  .notFlex {
+    flex-direction: column;
+  }
+  .checkOutD::before {
+    content: none;
+  }
+  .paddOut {
+    padding: 0px !important;
+  }
 }
